--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <section id="hero">
     <div class="hero-container">
       <div data-aos="fade-in">
-        <div class="hero-logo">
+        <!-- <div class="hero-logo">
           <img class="" src="assets/img/logo.png" alt="Dragify">
-        </div>
+        </div> -->
 
         <h1>Welcome to the Dragify world</h1>
         <h2><span class="typed" data-typed-items="5000 unique NFTs, All hand-drawn, Hundreds of attributes, More coming soon.."></span></h2>
