--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed q">What can I do with my Dragons? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  
+                  Anything you like. You have the rights to use them for personal or commercial cases.
                 </p>
               </div>
             </li>
