--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		background, body, wings, eyes, mouth, nails, clothes, tatto, scars and accessories like necklace, hat, in-hand objects. 
             </p>
             <p class="about-text">
-              Depending on demand collection airdrops and other utilities could be expected.
+              Depending on demand, collection airdrops and other utilities could be expected.
             </p>
           </div>
         </div>
