--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="https://dragify.me/mint">Mint</a></li>
+	  <li><a class="nav-link scrollto" href="#story"></a>Story</li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -104,6 +105,64 @@
         </div>
       </div>
     </section><!-- End About Section -->
+	  
+    <section>
+	    Bloodbound: The Apology
+Chapter I.
+A God’s Wish
+A tale of the mightiest of beings. About a linage carved into stone, a solid truth to be kept as a promise, as a mark of everlasting peace even before their creation. This was the wish of the God of Scales. An equal bloodline of might, tolerance, and sheer power to balance out one another.
+Creatures of Scales; commitment and magic, varying in all tones of known colors, bearing the potential of a new beginning. Bound by blood, brothers and sisters so mismatched on purpose, for the sake of true balance. A race so diverse yet identical, the bloodline was their anchor to harmony, yet it was defiled by one factor. They were Dragons.
+Twelve of their kind, with three of them evolving into the dominant breeds gaining control over the others, with the help of a fragile alliance founded between them. The God of Scales thought of this process as the natural evil for the sake of the greater good, order and an established hierarchy among the breeds would be only for their best interest.
+Sylanac of the Sky, Rosdar of the Earth and Leest of the Blood. Three ancient names echoing divinity and superiority. The three breeds of the dragons, who have conquered all the rest, taking their powers becoming almost limitless. Their balance was supposed to bring order to all the lands, a harmony between the sky, the earth and blood. The vision of the God of Scales.
+However, strings pulled by its own children, with the fragile dream of a whispered peace, it buckled on its own principles. Sylanac and Rosdar betrayed the third race, their once brotherly ally breed of Leest, the vessels of Blood, that was supposed to remind them to their origins. Enslaved, tortured beyond recognition to never let them be even close to what the other two are. They were thrown amongst the other nine enslaved breeds, to serve the dragons of Sylanac and Rosdar eternally. Greed, had done its magic.
+“A dragon of Blood bears ambition, determination and the drive to be above the skies and the land. Us of tangible elements, must not let those fueled with the powers of life-force come any closer to our divine.” 
+– Arathox, The Dreaded’s speech to the dragons of Slyanac and Rosdar.
+The mighty ones basked in the aftermath, while those trampled; the Leest were forsaken to eternal servitude, under the rule of their brothers and sisters. But, this tragical outcome would never pass the all-seeing eye of the God of Scales, the restless god’s fury was about to be unleashed on the world it had created. Balance was toppled, three breeds of dragons would have brought harmony, two will bring only destruction in the eyes of the God of Scales.
+The Endless Night crushed the clouds and burned the land to cinder, leaving nothing but the blackened sky and rocky mountains without the flow of life, without anything to give joy to the two tyrant breeds. The core of the world was heating up, as a display of the god’s true power, to let the oppressors know, that their days are counted.
+The phenomenon fueled an erupting conflict between those who caused it. The reality of their defiance resulted the fall in being each other’s helping hand at a possible collapse. The brotherly love between the two, soon faded as those of Sylanac and Rosdar, started blaming each other for the unbearable consequences.
+The God of Scales gave one last chance to these dragons. Its holy being, wrote a prophecy, a spell of great radiance that was meant to outshine the darkness caused by its children. 
+The Apology.
+A great ritual that would require all twelve breeds of the dragons together, birthing the balance in existence, the god’s vision. The Apology would need the Sylanac and Rosdar to submit, and yield their dominance to grant everyone a future, to become once more the rest of the races’ equals, however, remaining superior was worth more in the eyes of the dragons of Syalanc and Rosdar.
+
+
+
+Chapter II.
+Sins of the Children
+The refusal of the Apology had brought nothing, it’s all a stabilized emptiness in the barebone lands of their inhabited world. A promise of peace, that had come to a halt. Those victorious, purposefully segregated each other from their once ally, to set a barrier between them, and responsibility, with the other’s blame included. However, they were still not yet fully done with the Leest’s enslavement, the dragons of Blood, were still more powerful than the other nine breeds who had been suffering for untold ages, under their rule.
+They did not know how much time they had left until their world collapses from the inside out. Therefore, the dragons of Leest’s still barely shining remnants of magic were put to intolerable work, deep beneath the ground, at the core of their crumbling world. The means of halting this process, manifested in sacrifices, rituals, the tireless work that were all daily occurrences in the abyssal hellhole, all conducted by the Sylanac and Rosdar.
+While the Leest were under the reign of the tyrants. The tyrants themselves had to find a temporary solution to control the Endless Night on the surface, without the light and warmth of a star, without water, without any embodiment of life. The means of survival compelled these dragons to part themselves from their limitations in power and push themselves beyond their bounds.
+
+The Syalanc fled to the sky, the Rosdar retreated into the mountains. A coalescence of their powers in the elements split into a source to cast light and warmth in the sky, and design the water of their own, to stir life back to how it was supposed to be. This joined effort stabilized the global demise, however, their obligatory alliance was just as fragile as it was before, only the drive to survive kept them working together, nothing else.
+The Syalanc and Rosdar do not succumb or bow to their god, the great spell of the Apology is out of question.
+Chapter III.
+The Bloodline
+The Endless Night was insufferable for the two dragon breeds. Keeping the illumination, the false star, and the almost illusional waters to live where their desires took them, was all just a deception to avoid the conflict. But real conflict, could not be avoided under such conditions.
+The Rosdar expressed their hate towards the Sylanac, keeping their flowing water in the mountains, and the habitants of the skies soon veiled the false star’s light with darkened clouds. Emotions and personal gains took ground among these dragons, and their infuriated boiling blood soon became past bearing, and the fragile alliance founded on deception escalated into a mutual outburst, in the shape of a fatal dance.
+With fire and earth, they danced into their downfall, with desperate commitments to overcome the other. Hopelessness, made the Rosdar fell into this rabbit hole first. Through gloomy tunnels going as deep as their doomed world’s core, their Leest brothers and sisters were there, suffering their enslaved fate.
+The Rosdar picked one out of the many thousands, the strongest and most fit for their revengeful purpose and through ill-fated incantations and rituals of the Leest; bound by blood, the chosen dragon’s insides were cascaded with the blood of the Rosdar. Filled like an empty cup he was, elemental energies flooded his body and created something beyond imagining. A thirst, in the dragon, the desire to taste more of this kind of magnificent life-force. The mountains’ habitants seemed to reach their purpose with the dragon, that they named Kyro. The original intent of a dragon of Blood collapsed inside him, the God of Scales’ vision that the dragons of Blood would help its children stay together had evolved into a monstrous image. Kyro, was no longer one of the dragons of Leest. The Rosdar unleashed the empowered dragon.
+His destination; the skies of the Sylanac.
+Chapter IV.
+Kyro, the Unchained
+An enslaved dragon who was unchained, such an inexplicable consequence of growing desperation, that was unimaginable, forbidden amongst the two dominant breeds. A dragon lit with the fire and fury of a power long forbidden and forgotten to his kind. The Unchained traversed paths of the underground and the surface, guided by the Rosdar to deliver chaos to the Sylanac on a silver plate.
+The natives of the skies were shocked, when a dragon of Leest, touched their divine clouds, generating a chilling fear in all Sylanac. The dragon however, came as a friend. Kyro’s offering was friendship in exchange for blood, the Sylanac’s doubts were obvious, but the charm of gaining an edge over their enemies, the Rosdar, was too tempting not to accept the unchained dragon’s proposal.
+An already full cup filled with even more radiating potential and sheer magical capabilities, the blood of the two dominant dragons.
+The thirst was now truly unbearable, the raw exposure to the Endless Night proved to be its weakest point, in deforming a personality, corrupting a soul. It was a flower bloomed into a thorn, a birthed chaos.
+His vision became obstructed by the sins of the blood he consumed. Hatred, greed and guilt took control over his mind in a split of a second, and a fiery ambition to end the eternal and change the constant brightened up like a candle in darkness.
+The elements of life, the altered energies of the Sylanac and the Rosdar that were the tools of war for centuries was now in the hands of a dragon of Leest. The tables looked turned, and thoughts of so far unspeakable deeds drilled instincts into his mind. 
+Reach the Apology, without the other dragons.
+“I shall siphon this world dry and inhale whatever remains. I shall unleash fury in fire and flames, your own leash will fasten around you as I bathe in your blood. The Apology was never meant for you, but for me. Kyro.” – Kyro, The Unchained
+
+Chapter V.
+Fate Unseen
+An opportunity ripe for the taking. After the unchained consumed the blood of the two dragon breeds, chaos erupted among all of Sylanac and Rosdar. Afraid of the common enemy, they once more put aside their differences and tried to get in contact with each other. An enslaved dragon, was granted the power of both, because of their desperation and desire to remain the one and only.
+Mistakes of those without bare wisdom; they must suffer the consequences of their own accomplishments.
+The fear of Kyro and his newly gained powers has become the instrument of the joint effort. The nine breeds of the still enslaved dragons are agitated to oppose their long years of suppression and join Kyro, wherever he went. But, this is not what makes the two dragon breeds so terrified.
+But the sheer thought; no one knows where the Unchained is.
+Horrifying suspicions and theories are made everyday in the heads of the Sylanac and Rosdar, that the Unchained would not stop with their blood.
+That Kyro is looking for something much more than they could’ve imagined. An unparalleled force of a divine singular, an untouchable celestial’s life-force.
+The blood of the God of Scales.
+
+    </section>
 	
 	<!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq section-bg">
