--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="https://dragify.me/mint">Mint</a></li>
-	  <li><a class="nav-link scrollto" href="#story"></a>Story</li>
+	  <li><a class="nav-link scrollto" href="#story">Story</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -106,7 +106,7 @@
       </div>
     </section><!-- End About Section -->
 	  
-    <section>
+    <section id="story">
 	    <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-md-12">
