--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1>Welcome to the Dragify world</h1>
         <h2><span class="typed" data-typed-items="5000 unique NFTs, All hand-drawn, Hundreds of attributes, More coming soon.."></span></h2>
         <div class="actions">
-          <a href="https://dragify.me/mint" class="btn-get-started">Mint</a>
+          <!-- <a href="https://dragify.me/mint" class="btn-get-started">Mint</a> -->
           <a href="#about" class="btn-services">Read More</a>
         </div>
       </div>
@@ -61,7 +61,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="https://dragify.me/mint">Mint</a></li>
+          <!-- <li><a class="nav-link scrollto" href="https://dragify.me/mint">Mint</a></li> -->
 	  <li><a class="nav-link scrollto" href="#story">Story</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
