--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="row">
 
           <div class="col-lg-6 about-img">
-            <img src="assets/img/about-img.jpg" alt="">
+            <img src="assets/img/Dragify_Gif.gif" alt="">
           </div>
 
           <div class="col-md-6 about-content">
